asg/tests/pass/integers/i64/negate_zero.leo
function main() {
    let a = 0i64;

    console.assert(-a == 0i64);
}