asg/tests/fail/mutability/const.leo
// Let variables are immutable by default.
function main() {
    let a = 1u32;
    a = 0;
}